--- a/about_us.html
+++ b/about_us.html
@@ -6,12 +6,6 @@
   <title>About Us - Prices For Procedures</title>
   <link rel="stylesheet" href="main.css">
   <style>
-    body {
-      background-color: #ffffff;
-      color: #333;
-      font-family: Arial, sans-serif;
-    }
-
     table {
       width: 100%;
       border-collapse: collapse;
@@ -20,14 +14,12 @@
 
     th, td {
       border: 1px solid #ddd;
-      padding: 12px;
+      padding: 8px;
       text-align: left;
-      font-size: 18px;
     }
 
     th {
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
+      background-color: #f4f4f4;
     }
 
     .about-section {
@@ -45,49 +37,25 @@
     }
 
     h2 {
-      font-size: 26px;
-      color: rgb(33, 33, 33);
-      margin-bottom: 20px;
+      text-align: center;
     }
 
     header {
       display: flex;         
       justify-content: space-between;
       align-items: center;  
-      padding: 5px;
-    }
-
-    .header-content {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-    }
-
-    .header-logo {
-      width: 100px; 
-      height: 100px;
-      margin-right: 0px;
-    }
-
-    .header-title {
-      font-size: 32px; /* Bigger text */
-      color: white;
-      text-decoration: none;
-    }
-
-    .header-title:hover {
-      text-decoration: underline;
-    }
-
-    .header-link { 
-      color: white;  
-      font-size: 20px;
       padding: 20px;
     }
 
+    .header-link { 
+    color:rgb(255, 255, 255);  
+    font-size: 16px;
+    padding: 20px;
+    }
+
     .header-link:hover {
-      text-decoration: underline;  
-      color: #ffffff;
+      text-decoration: underline;  /* Underline the link on hover */
+      color:rgb(140, 140, 140);              /* Change the color when hovered (optional) */
     }
 
     footer {
@@ -95,15 +63,13 @@
       margin-top: 40px;
     }
 
+
   </style>
 </head>
 <body>
   <header>
-    <a href="index.html" class="header-content">
-      <img src="logo.png" alt="Website Logo" class="header-logo">
-      <h1 class="header-title">Prices For Procedures</h1>
-    </a>
-    <a href="index.html" class="header-link">Home</a>
+    <h1>Prices For Procedures</h1>
+    <a href="index.html" class="header-link">Home</a> <!-- Link in top-right -->
   </header>
 
   <main>
@@ -112,11 +78,11 @@
       <h2>About Us</h2>
       <p>Welcome to Prices For Procedures. Our mission is to provide accurate and transparent pricing information for medical procedures across various hospitals. We strive to empower patients with the knowledge they need to make informed decisions regarding their healthcare expenses.</p>
 
-      <p>Our team consists of healthcare professionals, data scientists, and engineers working together to ensure that we collect, analyze, and present the most up-to-date and reliable pricing information. We understand how important it is for individuals to access transparent pricing, and we are committed to helping patients make well-informed choices based on comprehensive data.</p>
+      <p>Our team consists of only two people, but we still strive to maintain accurate information. The information is regularly updated to reflect the latest pricing changes. We understand how important it is for individuals to access transparent pricing, and are committed to helping patients make well-informed choices based on comprehensive data.</p>
 
-      <p>Our data is sourced from a variety of reputable hospitals, and we ensure the information is regularly updated to reflect the latest pricing changes. We aim to improve healthcare transparency and create a platform where patients can find answers to their questions regarding the costs of medical procedures.</p>
+      <p>Our data is sourced from Kettering Hospital and Miami Valley Hospital in the Dayton area. However, we’re currently working on expanding our website to areas past Dayton, but need your support to make it happen!</p>
 
-      <p>If you have any questions or suggestions, feel free to contact us at this email address <a href="mailto:someemailadress@gmail.com">HERE</a>.</p>
+      <p>If you have any questions or suggestions, feel free to contact us at this email address <a href="mailto:pricesforprocedures@gmail.com">HERE</a>.</p>
     </section>  
   </main>
 
