fixed mobile text sizing, and added extra bullet point

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="main.css">
   <style>
     table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      overflow-x: auto;
-    }
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 5px;
+            height: 100%;
+            table-layout: fixed;
+            margin-top: 20px;
+            overflow-x: auto;
+      }
 
     th, td {
       border: 1px solid #ddd;
@@ -149,7 +152,7 @@
       table {
             margin-left: auto;
             margin-right: auto;
-            font-size: 10px;
+            font-size: 5px;
             height: 100%;
             table-layout: fixed;
       }
@@ -179,6 +182,9 @@
         <p><strong>How to Use This Website:</strong></p>
         <ul>
           <li>Enter the name of a procedure or medication in the search bar above.</li>
+            <ul>
+              <li>For example, if you are searching for a brain MRI, search “MRI Brain.”</li>
+            </ul>
           <li>Click the <strong>Search</strong> button to see the results.</li>
           <li>The table below will display relevant hospital names, addresses, and prices.</li>
           <li>If no results are found, try refining your search term.</li>
