fixed table sizing

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   <link rel="stylesheet" href="main.css">
   <style>
     table {
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 5px;
-            height: 100%;
-            table-layout: fixed;
-            margin-top: 20px;
-            overflow-x: auto;
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      overflow-x:auto;
       }
 
     th, td {
