--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         font-size: 16px; /* Smaller text for mobile */
         padding: 8px; /* Reduce padding for mobile */
       }
+      
+      table {
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 5px;
+            height: 100%;
+            table-layout: fixed;
+      }
     }
 
     @media screen and (max-width: 480px) {
