--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       }
 
       th, td {
-        font-size: 16px; /* Smaller text for mobile */
+        font-size: 10px; /* Smaller text for mobile */
         padding: 8px; /* Reduce padding for mobile */
       }
-      
+
       table {
             margin-left: auto;
             margin-right: auto;
@@ -153,7 +153,12 @@
       h2 {
         font-size: 18px;
       }
-      
+
+      th, td {
+        font-size: 8px; /* Smaller text for mobile */
+        padding: 6px; /* Reduce padding for mobile */
+      }
+
       table {
             margin-left: auto;
             margin-right: auto;
