--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
       background-color: #0056b3;
     }
 
+    .search {
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* Ensures everything stays centered */
+      text-align: center;
+    }
+
+
     /* Responsive adjustments */
     @media screen and (max-width: 768px) {
       .header-title {
